<resources>
    <string name="app_name">Telegram</string>
    <string name="back_button">Back button</string>
    <string name="search_button">Search Button</string>
    <string name="more_button">Menu Button</string>
    <string name="name">Taha Saad</string>
    <string name="status">online</string>
    <string name="phone_button">Phone Button</string>
    <string name="account">Account</string>
    <string name="phone_num">+9647838262030</string>
    <string name="change_num">Tap to change phone number</string>
    <string name="flutterdevtahasaad">\@tahasaad96</string>
    <string name="username">Username</string>
    <string name="mobile_apps_engineer">Mobile Apps Engineer</string>
    <string name="bio">Bio</string>
    <string name="icon">Icon</string>
    <string name="help">Help</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="telegram_faq">Telegram FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>